samples/_failures_safe/1761347929_8bf79d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_746dd9c7.c: In function ‘main’:
./samples/SAFE/__tmp_746dd9c7.c:159:13: error: expected identifier or ‘(’ at end of input
  159 |             char
      |             ^~~~
./samples/SAFE/__tmp_746dd9c7.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_746dd9c7.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_746dd9c7.c:159:13: error: expected declaration or statement at end of input
